  
  [ Robert Roth ]
  * lp:~evfool/update-manager/lp351665:
    -  Use ngettext to humanize size (LP: #351665)
  * lp:~evfool/update-manager/distupgradefixes:
    - DistUpgrade changes dialog text fixes 
      (LP: #348517, LP: #513908)
    - Fix resize on changes dialog to stretch the details
      (LP: #294293)

  [ Michael Vogt ]
  * add humanize_size() test
  
 -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800

update-manager (1:0.156.2) precise; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/removal_blacklist.cfg:
    - add unity, unity-2d

  [ Brian Murray ]
  * debian/source_update-manager.py: use attach_file for dist-upgrade log
    files rather than attach_root_command_outputs resolving the double gzipped
    apt clone attachment issue
  
  [ Matthew Linscott ]
  * UpdateManager/Core/utils.py
    - fixed typos in docstring for ExecutionTime 

  [ Daniel Polehn ]
  * DistUpgrade/DistUpgradeView.py
    - Made usage of 'canceled' v. 'cancelled' consistent. LP: #918302

 -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jan 2012 15:37:27 -0800

update-manager (1:0.156.1) precise; urgency=low

  * debian/source_update-manager.py: include AptDaemon messages from syslog to
    help identify failures

 -- Brian Murray <brian@ubuntu.com>  Tue, 17 Jan 2012 15:21:37 -0800

update-manager (1:0.156) precise; urgency=low

  [ Michael Vogt ]
  * pyflake fixes, remove some dead code
  * update unity dependency

  [ Brian Murray ]
  * DistUpgrade/DistUpgradeController.py
    - call apport-cli directly for bug reporting of errors
  * check-new-release-gtk
    - ensure to write a integer when calculating the next time that
      the release available window will be presented (LP: #873424)
    - hide redundant release-notes button (LP: #873432)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 13 Jan 2012 11:08:32 +0100

update-manager (1:0.155.3) precise; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/removal_blacklist.cfg: