@@ -17,15 +17,16 @@
 #  You should have received a copy of the GNU General Public License
 #  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-from PyKDE4.kdecore import *
-from PyKDE4.kdeui import *
-from PyQt4.QtCore import *
-from PyQt4.QtGui import *
+from PyKDE4.kdecore import ki18n, KAboutData, KCmdLineOptions, KCmdLineArgs
+from PyKDE4.kdeui import KIcon, KMessageBox, KApplication, KStandardGuiItem
+from PyQt4.QtCore import QDir, QTimer
+from PyQt4.QtGui import QDialog, QDialogButtonBox
 from PyQt4 import uic
 
+import apt_pkg
 import sys
 
-from Core.utils import *
+from Core.utils import inhibit_sleep, allow_sleep
 from Core.DistUpgradeFetcherCore import DistUpgradeFetcherCore
 from gettext import gettext as _
 import urllib2
