@@ -23,6 +23,10 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
   * add humanize_size() test
+  * pyflakes fixes
+  * tests/test_pyflakes.py:
+    - always pyflakes as part of the pre-build process to ensure
+      we are clean
   
  -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
 
